[metadata]
name = scb_import
version = 0.0.1
url = https://github.com/tsvenson/scb_import
author = Thomas Svenson
author_email = thomas@tsvenson.com
license = MIT
description = Tools for using the SCB open data API.
long_description = file: README.rst
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet
    Topic :: Software Development :: Libraries

[options]
packages = scb_import
install_requires =
    requests
